# robotics_software_engineer

./: .gitmodules
module_1_assignment/: CMakeLists.txt  README.md
module_1_assignment/include/task1/: C3PO.h  R2D2.h
module_1_assignment/include/task2/: RobotTask2.h
module_1_assignment/include/task3/: RobotTask3.h
module_1_assignment/src/task1/: C3PO.cpp  R2D2.cpp  assignment1.cpp
module_1_assignment/src/task2/: RobotTask2.cpp  assignment2.cpp
module_1_assignment/src/task3/: RobotTask3.cpp  assignment3.cpp
module_2_assignment/: CMakeLists.txt  Readme.md  package.xml
module_2_assignment/include/turtlesim_commander/: turtlesim_commander.h
module_2_assignment/launch/: clean_turtlesim.launch.py  drive_all_turtles.launch.py  drive_turtle.launch.py  drive_turtlebot.launch.py  spawn_turtles.launch.py
module_2_assignment/src/turtlesim_commander/: command_turtle.cpp  turtlesim_commander.cpp
module_3_assignment/: CMakeLists.txt  Readme.md
module_3_assignment/launch/: rviz.launch.py
module_3_assignment/rviz/: rviz_task1.rviz  rviz_task2.rviz  rviz_task3a.rviz  rviz_task3b.rviz
module_3_assignment/urdf/: task1_robotic_arm.urdf  task2_robotic_arm.urdf  task3a_mobile_arm.urdf  task3b_ackerman.urdf
module_4_assessment/: README.md
module_4_assessment/doc/: robot_sensing_debug_diff.txt
module_4_assessment/module_4_assignment/: CMakeLists.txt  package.xml
module_4_assessment/module_4_assignment/include/line_follower_camera/: line_follower_camera.h
module_4_assessment/module_4_assignment/include/maze_solver/: maze_solver.h
module_4_assessment/module_4_assignment/launch/: line_follower.launch.py  maze_solver.launch.py
module_4_assessment/module_4_assignment/models/line_track/: model.sdf
module_4_assessment/module_4_assignment/models/maze/: model.sdf
module_4_assessment/module_4_assignment/models/square/: model.sdf
module_4_assessment/module_4_assignment/src/line_follower_camera/: line_follower.cpp  line_follower_camera.cpp
module_4_assessment/module_4_assignment/src/maze_solver/: maze_solver.cpp  scan_laser_data.cpp
module_4_assessment/module_4_assignment/worlds/: line_follower.world  maze.world  square.world
module_4_assessment/robot_sensing_debug/launch/: camera_line_following.launch.py  custom_sensors.launch.py  lidar_maze_solving.launch.py
module_4_assessment/robot_sensing_debug/src/: maze_solving_with_lidar.cpp
module_5_assignment/: CMakeLists.txt  README.md
module_5_assignment/config/: arm_waypoints.yaml  robotic_arm_controllers.yaml  routes.yaml
module_5_assignment/doc/task1/: Task1 Analysis - Camera PID Line Following.ipynb  log_task1.csv
module_5_assignment/doc/task2/: Task 2 - Low Energy Path - Position Analysis.ipynb  log_task2.csv
module_5_assignment/doc/task3/: act_gripper.sh  act_joints.sh
module_5_assignment/doc/task3/octave/: forwardKinematics.m  inverse_kinematics.m  plot_manipulator.m
module_5_assignment/doc/task4/: Task 4 - LQR Analysis - State Analysis.ipynb  log_task4.csv  log_task4_best.csv  log_task4_high_q_high_r.csv  log_task4_high_q_low_r.csv  log_task4_high_r_low_q.csv  log_task4_low_q_low_r.csv  log_task4_mid_q_mid_r.csv
module_5_assignment/include/arm_path_planner/: arm_path_planner.h
module_5_assignment/include/goal_planner/: goal_planner.h
module_5_assignment/include/line_follower_camera/: line_follower_camera.h
module_5_assignment/include/lqr_lib/: lqr_lib.hpp
module_5_assignment/include/lqr_node/: lqr_node.hpp
module_5_assignment/include/pid_lib/: pid_lib.hpp
module_5_assignment/include/waypoints_lib/: waypoints_lib.hpp
module_5_assignment/launch/: gazebo_ros.launch.py  line_follower_pid.launch.py  main.launch.py  main_robotic_arm.launch.py  main_tb3_goal_planner.launch.py  main_tb3_line_world.launch.py  main_tb3_lqr.launch.py  robotic_arm_controllers.launch.py  rviz.launch.py  tb3_line_world.launch.py
module_5_assignment/rviz/: config.rviz  lqr.rviz
module_5_assignment/src/arm_path_planner/: arm_path_planner.cpp  arm_planner.cpp
module_5_assignment/src/goal_planner/: goal_planner.cpp  goal_planner_node.cpp
module_5_assignment/src/line_follower_camera/: line_follower_camera.cpp
module_5_assignment/src/lqr_lib/: lqr_lib.cpp  lqr_node.cpp
module_5_assignment/src/pid_lib/: pid_lib.cpp
module_5_assignment/src/waypoints_lib/: waypoints_lib.cpp
module_5_assignment/urdf/: robotic_arm.urdf
module_6_assignment/: CMakeLists.txt  README.md  Readme.md  package.xml
module_6_assignment/config/: ekf.yaml
module_6_assignment/include/extended_kalman_filter/: ekf_node.hpp
module_6_assignment/launch/: ekf_turtlebot3.launch.py  empty_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_house.launch.py  turtlebot3_world.launch.py
module_6_assignment/models/turtlebot3_waffle_gps/: model.sdf
module_6_assignment/rviz/: robot_localization.rviz
module_6_assignment/src/extended_kalman_filter/: ekf_node.cpp  extended_kalman_filter.cpp
module_6_assignment/urdf/: turtlebot3_waffle_gps.urdf  turtlebot3_waffle_pi.urdf
module_7_assignment/: CMakeLists.txt  README.md
module_7_assignment/config/: mapper_params_online_async.yaml  rviz.rviz
module_7_assignment/doc/utilities/: pgm2png.py
module_7_assignment/launch/: map_loading_2d.launch.py  maze_mapping_2d.launch.py  maze_mapping_3d.launch.py  maze_tb3_bringup.launch.py
module_7_assignment/map/: corridor.pgm  corridor.yaml  map.yaml  mapgmapping.pgm  mapgmapping.yaml  maze1.pgm  maze1.yaml  maze_2d.pgm  maze_2d.yaml
module_7_assignment/models/: model.sdf
module_7_assignment/models/corridor/: model.sdf
module_7_assignment/models/maze_map/: model.config  model.sdf
module_7_assignment/worlds/: corridor.world  maze_map.world
